canal-mqbroker-rabbit 无法运行

--- a/fxk-boot-canal/fxk-boot-canal-autoconfigure/fxk-boot-canal-core-autoconfigure/pom.xml
+++ b/fxk-boot-canal/fxk-boot-canal-autoconfigure/fxk-boot-canal-core-autoconfigure/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>fxk-boot-redis-autoconfigure</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fanxuankai.spring</groupId>
+            <artifactId>fxk-spring-util</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
