--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mq-common/pom.xml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mq-common/pom.xml
@@ -16,6 +16,18 @@
             <groupId>com.fanxuankai.canal</groupId>
             <artifactId>canal-mq-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fanxuankai.boot</groupId>
+            <artifactId>fxk-boot-starter-mybatis-plus</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jsonzou</groupId>
+            <artifactId>jmockdata</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
