--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mq-common/pom.xml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mq-common/pom.xml
@@ -19,6 +19,7 @@
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
             <artifactId>fxk-boot-starter-mybatis-plus</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
