--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mqbroker-rabbit/pom.xml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mqbroker-rabbit/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>fxk-boot-test-canal-mq-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fanxuankai.boot</groupId>
+            <artifactId>fxk-boot-starter-mybatis-plus</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
