--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-redis/src/main/resources/application.yml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-redis/src/main/resources/application.yml
@@ -5,4 +5,5 @@ canal:
       filter: canal_client_example.t_user
       show-entry-log: true
       show-event-log: true
+      batch-size: 10000
     enabled: true
