--- a/fxk-boot-mqbroker/fxk-boot-starter-mqbroker/fxk-boot-starter-mqbroker-runlion-xxl/pom.xml
+++ b/fxk-boot-mqbroker/fxk-boot-starter-mqbroker/fxk-boot-starter-mqbroker-runlion-xxl/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>fxk-boot-mqbroker-runlion-xxl-autoconfigure</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.runlion</groupId>
+            <artifactId>xxl-mq-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
