--- a/fxk-boot-dependencies/pom.xml
+++ b/fxk-boot-dependencies/pom.xml
@@ -20,6 +20,7 @@
         <skipTests>true</skipTests>
         <spring-boot-dependencies.version>2.2.7.RELEASE</spring-boot-dependencies.version>
         <mybatis-plus.version>3.3.1</mybatis-plus.version>
+        <xxl-mq-client.version>1.3.0-SNAPSHOT</xxl-mq-client.version>
     </properties>
 
     <licenses>
@@ -256,7 +257,12 @@
             <dependency>
                 <groupId>com.runlion</groupId>
                 <artifactId>xxl-mq-client</artifactId>
-                <version>1.3.0-SNAPSHOT</version>
+                <version>${xxl-mq-client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.runlion</groupId>
+                <artifactId>xxl-mq-boot-starter</artifactId>
+                <version>${xxl-mq-client.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.redisson</groupId>
