--- a/fxk-boot-dependencies/pom.xml
+++ b/fxk-boot-dependencies/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <revision>2.3.5-SNAPSHOT</revision>
+        <revision>2.4.0-SNAPSHOT</revision>
         <java.version>1.8</java.version>
         <java.source.version>1.8</java.source.version>
         <java.target.version>1.8</java.target.version>
@@ -18,7 +18,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <skipTests>true</skipTests>
-        <spring-boot-dependencies.version>2.3.5.RELEASE</spring-boot-dependencies.version>
+        <spring-boot-dependencies.version>2.4.0</spring-boot-dependencies.version>
         <mybatis-plus.version>3.3.1</mybatis-plus.version>
         <xxl-mq-client.version>1.3.0-SNAPSHOT</xxl-mq-client.version>
     </properties>
@@ -245,7 +245,7 @@
             <dependency>
                 <groupId>com.fanxuankai.spring</groupId>
                 <artifactId>fxk-spring-dependencies</artifactId>
-                <version>5.2.10-SNAPSHOT</version>
+                <version>5.3.1-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
