--- a/fxk-boot-elasticsearch/fxk-boot-starter-elasticsearch/pom.xml
+++ b/fxk-boot-elasticsearch/fxk-boot-starter-elasticsearch/pom.xml
@@ -13,6 +13,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.fanxuankai.boot</groupId>
+            <artifactId>fxk-boot-elasticsearch-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
