--- a/fxk-boot-canal/fxk-boot-starter-canal/fxk-boot-starter-canal-rocketmq/pom.xml
+++ b/fxk-boot-canal/fxk-boot-starter-canal/fxk-boot-starter-canal-rocketmq/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>fxk-boot-canal-rocketmq-autoconfigure</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
