--- a/fxk-boot-canal/fxk-boot-starter-canal/pom.xml
+++ b/fxk-boot-canal/fxk-boot-starter-canal/pom.xml
@@ -23,6 +23,7 @@
         <module>fxk-boot-starter-canal-redis</module>
         <module>fxk-boot-starter-canal-rocketmq</module>
         <module>fxk-boot-starter-canal-xxlmq</module>
+        <module>fxk-boot-starter-canal-clickhouse</module>
     </modules>
 
     <dependencies>
