--- a/fxk-boot-mybatis-plus/pom.xml
+++ b/fxk-boot-mybatis-plus/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>fxk-boot-mybatis-plus-autoconfigure</module>
         <module>fxk-boot-starter-mybatis-plus</module>
+        <module>fxk-boot-mybatis-plus-core</module>
     </modules>
 
 </project>
