--- a/fxk-boot-canal/fxk-boot-canal-autoconfigure/fxk-boot-canal-clickhouse-autoconfigure/pom.xml
+++ b/fxk-boot-canal/fxk-boot-canal-autoconfigure/fxk-boot-canal-clickhouse-autoconfigure/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>fxk-boot-canal-autoconfigure</artifactId>
         <groupId>com.fanxuankai.boot</groupId>
+        <artifactId>fxk-boot-canal-autoconfigure</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-canal-clickhouse-autoconfigure</artifactId>
-
+    <name>FXK Boot Canal ClickHouse Autoconfigure</name>
+    <description>FXK Boot Canal ClickHouse Autoconfigure</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
@@ -22,5 +22,4 @@
             <artifactId>canal-clickhouse</artifactId>
         </dependency>
     </dependencies>
-
 </project>
