--- a/fxk-boot-canal/fxk-boot-canal-autoconfigure/fxk-boot-canal-core-autoconfigure/pom.xml
+++ b/fxk-boot-canal/fxk-boot-canal-autoconfigure/fxk-boot-canal-core-autoconfigure/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-canal-autoconfigure</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-canal-core-autoconfigure</artifactId>
-
+    <name>FXK Boot Canal Core Autoconfigure</name>
+    <description>FXK Boot Canal Core Autoconfigure</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai</groupId>
@@ -30,5 +30,4 @@
             <artifactId>fxk-spring-util</artifactId>
         </dependency>
     </dependencies>
-
 </project>
