--- a/fxk-boot-canal/fxk-boot-canal-autoconfigure/pom.xml
+++ b/fxk-boot-canal/fxk-boot-canal-autoconfigure/pom.xml
@@ -2,16 +2,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-canal</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-canal-autoconfigure</artifactId>
     <packaging>pom</packaging>
-
+    <name>FXK Boot Canal Autoconfigure</name>
+    <description>FXK Boot Canal Autoconfigure</description>
     <modules>
         <module>fxk-boot-canal-core-autoconfigure</module>
         <module>fxk-boot-canal-elasticsearch-autoconfigure</module>
@@ -26,7 +26,6 @@
         <module>fxk-boot-canal-xxlmq-autoconfigure</module>
         <module>fxk-boot-canal-clickhouse-autoconfigure</module>
     </modules>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,5 +40,4 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
     </dependencies>
-
 </project>
