--- a/fxk-boot-canal/fxk-boot-starter-canal/pom.xml
+++ b/fxk-boot-canal/fxk-boot-starter-canal/pom.xml
@@ -2,15 +2,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-canal</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-starter-canal</artifactId>
     <packaging>pom</packaging>
+    <name>FXK Boot Starter Canal</name>
+    <description>FXK Boot Starter Canal</description>
     <modules>
         <module>fxk-boot-starter-canal-elasticsearch</module>
         <module>fxk-boot-starter-canal-kafka</module>
@@ -25,12 +26,10 @@
         <module>fxk-boot-starter-canal-xxlmq</module>
         <module>fxk-boot-starter-canal-clickhouse</module>
     </modules>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
-
 </project>
