--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mq-common/pom.xml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mq-common/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>fxk-boot-test-canal</artifactId>
         <groupId>com.fanxuankai.boot</groupId>
+        <artifactId>fxk-boot-test-canal</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-test-canal-mq-common</artifactId>
-
+    <name>FXK Boot Test Canal MQ Common</name>
+    <description>FXK Boot Test Canal MQ Common</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.canal</groupId>
@@ -30,5 +30,4 @@
             <artifactId>jmockdata</artifactId>
         </dependency>
     </dependencies>
-
 </project>
