--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mysql/pom.xml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mysql/pom.xml
@@ -2,20 +2,19 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>fxk-boot-test-canal</artifactId>
         <groupId>com.fanxuankai.boot</groupId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-test-canal-mysql</artifactId>
-
+    <name>FXK Boot Test Canal MySQL</name>
+    <description>FXK Boot Test Canal MySQL</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
             <artifactId>fxk-boot-starter-canal-mysql</artifactId>
         </dependency>
     </dependencies>
-
 </project>
