--- a/fxk-boot-distributed-id/fxk-boot-starter-ddid/pom.xml
+++ b/fxk-boot-distributed-id/fxk-boot-starter-ddid/pom.xml
@@ -2,14 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-distributed-id</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
     <artifactId>fxk-boot-starter-ddid</artifactId>
-
+    <name>FXK Boot Starter Dang Dang ID</name>
+    <description>FXK Boot Starter Dang Dang ID</description>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -21,5 +22,4 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
