--- a/fxk-boot-distributed-lock/fxk-boot-distributed-lock-autoconfigure/pom.xml
+++ b/fxk-boot-distributed-lock/fxk-boot-distributed-lock-autoconfigure/pom.xml
@@ -2,14 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-distributed-lock</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
     <artifactId>fxk-boot-distributed-lock-autoconfigure</artifactId>
-
+    <name>FXK Boot Distributed Lock Autoconfigure</name>
+    <description>FXK Boot Distributed Lock Autoconfigure</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
@@ -27,5 +28,4 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
     </dependencies>
-
 </project>
