--- a/fxk-boot-distributed-lock/fxk-boot-distributed-lock-core/pom.xml
+++ b/fxk-boot-distributed-lock/fxk-boot-distributed-lock-core/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-distributed-lock</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-distributed-lock-core</artifactId>
-
+    <name>FXK Boot Distributed Lock Core</name>
+    <description>FXK Boot Distributed Lock Core</description>
 </project>
