--- a/fxk-boot-distributed-lock/fxk-boot-redis-lock-autoconfigure/pom.xml
+++ b/fxk-boot-distributed-lock/fxk-boot-redis-lock-autoconfigure/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-distributed-lock</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-redis-lock-autoconfigure</artifactId>
-
+    <name>FXK Boot Redis Lock Autoconfigure</name>
+    <description>FXK Boot Redis Lock Autoconfigure</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
@@ -27,5 +27,4 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
-
 </project>
