--- a/fxk-boot-distributed-lock/fxk-boot-test-redis-lock/pom.xml
+++ b/fxk-boot-distributed-lock/fxk-boot-test-redis-lock/pom.xml
@@ -2,19 +2,18 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-distributed-lock</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-test-redis-lock</artifactId>
-
+    <name>FXK Boot Test Redis Lock</name>
+    <description>FXK Boot Test Redis Lock</description>
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
@@ -26,5 +25,4 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
     </dependencies>
-
 </project>
