--- a/fxk-boot-enum-manager/fxk-boot-enum-core/pom.xml
+++ b/fxk-boot-enum-manager/fxk-boot-enum-core/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-enum-manager</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-enum-core</artifactId>
-
+    <name>FXK Boot Enum Core</name>
+    <description>FXK Boot Enum Core</description>
     <dependencies>
         <dependency>
             <groupId>javax.annotation</groupId>
@@ -42,5 +42,4 @@
             <artifactId>fastjson</artifactId>
         </dependency>
     </dependencies>
-
 </project>
