--- a/fxk-boot-enum-manager/fxk-boot-enum-mysql-autoconfigure/pom.xml
+++ b/fxk-boot-enum-manager/fxk-boot-enum-mysql-autoconfigure/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-enum-manager</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-enum-mysql-autoconfigure</artifactId>
-
+    <name>FXK Boot Enum MySQL Autoconfigure</name>
+    <description>FXK Boot Enum MySQL Autoconfigure</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
@@ -22,5 +22,4 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
     </dependencies>
-
 </project>
