--- a/fxk-boot-enum-manager/fxk-boot-starter-enum-mysql/pom.xml
+++ b/fxk-boot-enum-manager/fxk-boot-starter-enum-mysql/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>fxk-boot-enum-manager</artifactId>
         <groupId>com.fanxuankai.boot</groupId>
+        <artifactId>fxk-boot-enum-manager</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-starter-enum-mysql</artifactId>
-
+    <name>FXK Boot Starter Enum MySQL</name>
+    <description>FXK Boot Starter Enum MySQL</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
@@ -27,5 +27,4 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
