--- a/fxk-boot-enum-manager/fxk-boot-test-enum-mysql/pom.xml
+++ b/fxk-boot-enum-manager/fxk-boot-test-enum-mysql/pom.xml
@@ -2,19 +2,18 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-enum-manager</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-test-enum-mysql</artifactId>
-
+    <name>FXK Boot Test Enum MySQL</name>
+    <description>FXK Boot Test Enum MySQL</description>
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
@@ -30,5 +29,4 @@
             <artifactId>fastjson</artifactId>
         </dependency>
     </dependencies>
-
 </project>
