--- a/fxk-boot-mqbroker/fxk-boot-mqbroker-autoconfigure/fxk-boot-mqbroker-kafka-autoconfigure/pom.xml
+++ b/fxk-boot-mqbroker/fxk-boot-mqbroker-autoconfigure/fxk-boot-mqbroker-kafka-autoconfigure/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-mqbroker-autoconfigure</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-mqbroker-kafka-autoconfigure</artifactId>
-
+    <name>FXK Boot MQ Broker Kafka Autoconfigure</name>
+    <description>FXK Boot MQ Broker Kafka Autoconfigure</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
