--- a/fxk-boot-mqbroker/fxk-boot-mqbroker-autoconfigure/pom.xml
+++ b/fxk-boot-mqbroker/fxk-boot-mqbroker-autoconfigure/pom.xml
@@ -2,15 +2,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-mqbroker</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-mqbroker-autoconfigure</artifactId>
     <packaging>pom</packaging>
+    <name>FXK Boot MQ Broker Autoconfigure</name>
+    <description>FXK Boot MQ Broker Autoconfigure</description>
     <modules>
         <module>fxk-boot-mqbroker-kafka-autoconfigure</module>
         <module>fxk-boot-mqbroker-rabbit-autoconfigure</module>
@@ -18,7 +19,6 @@
         <module>fxk-boot-mqbroker-runlion-xxl-autoconfigure</module>
         <module>fxk-boot-mqbroker-xxl-autoconfigure</module>
     </modules>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -35,5 +35,4 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
-
 </project>
