--- a/fxk-boot-mqbroker/fxk-boot-starter-mqbroker/fxk-boot-starter-mqbroker-rabbit/pom.xml
+++ b/fxk-boot-mqbroker/fxk-boot-starter-mqbroker/fxk-boot-starter-mqbroker-rabbit/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>fxk-boot-starter-mqbroker</artifactId>
         <groupId>com.fanxuankai.boot</groupId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-starter-mqbroker-rabbit</artifactId>
-
+    <name>FXK Boot Starter MQ Broker Rabbit</name>
+    <description>FXK Boot Starter MQ Broker Rabbit</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
@@ -18,5 +18,4 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
