--- a/fxk-boot-mqbroker/fxk-boot-starter-mqbroker/pom.xml
+++ b/fxk-boot-mqbroker/fxk-boot-starter-mqbroker/pom.xml
@@ -2,15 +2,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-mqbroker</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-starter-mqbroker</artifactId>
     <packaging>pom</packaging>
+    <name>FXK Boot Starter MQ Broker</name>
+    <description>FXK Boot Starter MQ Broker</description>
     <modules>
         <module>fxk-boot-starter-mqbroker-kafka</module>
         <module>fxk-boot-starter-mqbroker-rabbit</module>
@@ -18,7 +19,6 @@
         <module>fxk-boot-starter-mqbroker-runlion-xxl</module>
         <module>fxk-boot-starter-mqbroker-xxl</module>
     </modules>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -34,5 +34,4 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
