--- a/fxk-boot-mqbroker/pom.xml
+++ b/fxk-boot-mqbroker/pom.xml
@@ -2,20 +2,21 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-parent</artifactId>
         <version>${revision}</version>
+        <relativePath>../fxk-boot-parent</relativePath>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
     <artifactId>fxk-boot-mqbroker</artifactId>
     <packaging>pom</packaging>
-
+    <name>FXK Boot MQ Broker</name>
+    <description>FXK Boot MQ Broker</description>
     <modules>
         <module>fxk-boot-mqbroker-autoconfigure</module>
         <module>fxk-boot-mqbroker-core</module>
         <module>fxk-boot-starter-mqbroker</module>
         <module>fxk-boot-test-mqbroker</module>
     </modules>
-
 </project>
