--- a/fxk-boot-mybatis-plus/fxk-boot-mybatis-plus-autoconfigure/pom.xml
+++ b/fxk-boot-mybatis-plus/fxk-boot-mybatis-plus-autoconfigure/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-mybatis-plus</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-mybatis-plus-autoconfigure</artifactId>
-
+    <name>FXK Boot Mybatis Plus Autoconfigure</name>
+    <description>FXK Boot Mybatis Plus Autoconfigure</description>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,5 +41,4 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
