--- a/fxk-boot-mybatis-plus/fxk-boot-mybatis-plus-core/pom.xml
+++ b/fxk-boot-mybatis-plus/fxk-boot-mybatis-plus-core/pom.xml
@@ -2,14 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>fxk-boot-mybatis-plus</artifactId>
         <groupId>com.fanxuankai.boot</groupId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-mybatis-plus-core</artifactId>
+    <name>FXK Boot Mybatis Plus Core</name>
+    <description>FXK Boot Mybatis Plus Core</description>
     <dependencies>
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -20,5 +21,4 @@
             <artifactId>mybatis-plus-extension</artifactId>
         </dependency>
     </dependencies>
-
 </project>
