--- a/fxk-boot-redis/pom.xml
+++ b/fxk-boot-redis/pom.xml
@@ -3,18 +3,18 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-parent</artifactId>
         <version>${revision}</version>
+        <relativePath>../fxk-boot-parent</relativePath>
     </parent>
     <artifactId>fxk-boot-redis</artifactId>
-
+    <packaging>pom</packaging>
+    <name>FXK Boot Redis</name>
+    <description>FXK Boot Redis</description>
     <modules>
         <module>fxk-boot-redis-autoconfigure</module>
         <module>fxk-boot-starter-redis</module>
     </modules>
-
 </project>
