--- a/fxk-boot-springfox/fxk-boot-starter-springfox/pom.xml
+++ b/fxk-boot-springfox/fxk-boot-starter-springfox/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>fxk-boot-springfox</artifactId>
         <groupId>com.fanxuankai.boot</groupId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-starter-springfox</artifactId>
-
+    <name>FXK Boot Starter SpringFox</name>
+    <description>FXK Boot Starter SpringFox</description>
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -22,5 +22,4 @@
             <artifactId>springfox-boot-starter</artifactId>
         </dependency>
     </dependencies>
-
 </project>
