--- a/fxk-boot-xxl-mq/fxk-boot-starter-xxl-mq/pom.xml
+++ b/fxk-boot-xxl-mq/fxk-boot-starter-xxl-mq/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-xxl-mq</artifactId>
         <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>fxk-boot-starter-xxl-mq</artifactId>
-
+    <name>FXK Boot Starter XXL MQ</name>
+    <description>FXK Boot Starter XXL MQ</description>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -22,5 +22,4 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
