spring security oauth2 代码优化

--- a/fxk-boot-security-oauth2/pom.xml
+++ b/fxk-boot-security-oauth2/pom.xml
@@ -11,8 +11,8 @@
         <relativePath>../fxk-boot-parent</relativePath>
     </parent>
     <artifactId>fxk-boot-security-oauth2</artifactId>
-    <name>FXK Boot Security</name>
-    <description>FXK Boot Security</description>
+    <name>FXK Boot Security Oauth2</name>
+    <description>FXK Boot Security Oauth2</description>
     <modules>
         <module>fxk-boot-starter-authorization-server</module>
         <module>fxk-boot-starter-resource-server</module>
