--- a/fxk-boot-starter-admin-example/pom.xml
+++ b/fxk-boot-starter-admin-example/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -9,20 +9,20 @@
         <version>${revision}</version>
         <relativePath>../fxk-boot-parent</relativePath>
     </parent>
-    <artifactId>fxk-boot-starter-enum-sample</artifactId>
-    <name>FXK Boot Starter Enum Sample</name>
-    <description>FXK Boot Starter Enum Sample</description>
+    <artifactId>fxk-boot-starter-admin-example</artifactId>
+    <name>FXK Boot Starter Admin Example</name>
+    <description>FXK Boot Starter Admin Example</description>
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
-            <artifactId>fxk-boot-starter-enum</artifactId>
+            <artifactId>fxk-boot-starter-admin</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.fanxuankai.boot</groupId>
+            <artifactId>fxk-boot-starter-generator</artifactId>
         </dependency>
     </dependencies>
 </project>
