security oauth2 代码优化

--- a/fxk-boot-security-oauth2/fxk-boot-starter-authorization-server-sample/src/main/resources/application.yml
+++ b/fxk-boot-security-oauth2/fxk-boot-starter-authorization-server-sample/src/main/resources/application.yml
@@ -10,16 +10,11 @@ logging:
       springframework:
         security:
           oauth2: debug
-fxk:
-  security:
-    oauth2:
-      authorization:
-        token-store: Jdbc
-#security:
-#  oauth2:
-#    authorization:
-#      jwt:
-#        key-store: classpath:mytest.jks
-#        key-alias: mytest
-#        key-password: mypass
-#        key-store-password: mypass
+security:
+  oauth2:
+    authorization:
+      jwt:
+        key-store: classpath:mytest.jks
+        key-alias: mytest
+        key-password: mypass
+        key-store-password: mypass
