--- a/fxk-boot-security-oauth2/fxk-boot-starter-authorization-server-sample/pom.xml
+++ b/fxk-boot-security-oauth2/fxk-boot-starter-authorization-server-sample/pom.xml
@@ -24,5 +24,9 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fanxuankai.boot</groupId>
+            <artifactId>fxk-boot-starter-redis</artifactId>
+        </dependency>
     </dependencies>
 </project>
