--- a/fxk-boot-security-oauth2/fxk-boot-starter-resource-server-sample/pom.xml
+++ b/fxk-boot-security-oauth2/fxk-boot-starter-resource-server-sample/pom.xml
@@ -16,5 +16,9 @@
             <groupId>com.fanxuankai.boot</groupId>
             <artifactId>fxk-boot-starter-resource-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fanxuankai.boot</groupId>
+            <artifactId>fxk-boot-starter-redis</artifactId>
+        </dependency>
     </dependencies>
 </project>
