--- a/fxk-boot-example/fxk-boot-starter-generator-example/pom.xml
+++ b/fxk-boot-example/fxk-boot-starter-generator-example/pom.xml
@@ -5,13 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.fanxuankai.boot</groupId>
-        <artifactId>fxk-boot-parent</artifactId>
+        <artifactId>fxk-boot-example</artifactId>
         <version>${revision}</version>
-        <relativePath>../fxk-boot-parent</relativePath>
     </parent>
-    <artifactId>fxk-boot-starter-generator-sample</artifactId>
-    <name>FXK Boot Starter Generator Sample</name>
-    <description>FXK Boot Starter Generator Sample</description>
+    <artifactId>fxk-boot-starter-generator-example</artifactId>
+    <name>FXK Boot Starter Generator Example</name>
+    <description>FXK Boot Starter Generator Example</description>
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
