oauth2 增加退出端点

--- a/fxk-boot-security-oauth2/fxk-boot-starter-authorization-server/pom.xml
+++ b/fxk-boot-security-oauth2/fxk-boot-starter-authorization-server/pom.xml
@@ -35,5 +35,9 @@
             <artifactId>spring-data-redis</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.fanxuankai</groupId>
+            <artifactId>commons</artifactId>
+        </dependency>
     </dependencies>
 </project>
