分布式锁获取参数名的方式优化; 增加 starter log.

--- a/fxk-boot-example/pom.xml
+++ b/fxk-boot-example/pom.xml
@@ -24,5 +24,6 @@
         <module>fxk-boot-starter-authorization-server-example</module>
         <module>fxk-boot-starter-resource-server-example</module>
         <module>fxk-boot-starter-redis-lock-example</module>
+        <module>fxk-boot-starter-log-example</module>
     </modules>
 </project>
