log 注解增加参数、返回值是否记录开关;Request 相关按条件注入;log 增加返回值字段.

--- a/fxk-boot-example/pom.xml
+++ b/fxk-boot-example/pom.xml
@@ -26,4 +26,10 @@
         <module>fxk-boot-starter-redis-lock-example</module>
         <module>fxk-boot-starter-log-example</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+    </dependencies>
 </project>
