canal 依赖 starter redis;消息消费重试代码优化.

--- a/fxk-boot-canal/fxk-boot-canal-core-autoconfigure/pom.xml
+++ b/fxk-boot-canal/fxk-boot-canal-core-autoconfigure/pom.xml
@@ -16,5 +16,9 @@
             <groupId>com.fanxuankai.canal</groupId>
             <artifactId>canal-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fanxuankai.boot</groupId>
+            <artifactId>fxk-boot-starter-redis</artifactId>
+        </dependency>
     </dependencies>
 </project>
